# numerous-files

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: files.yaml
docs/: CONTRIBUTING.md  LICENSE.md  README.md  aws_s3_file_manager.md  file_manager.md  file_manager_factory.md  local_file_manager.md  memory_file_manager.md
src/numerous/: __init__.py
src/numerous/files/: __init__.py  aws_s3.py  file_manager.py  local.py  memory.py
tests/: test_aws_filemanager.py  test_file_manager_factory.py  test_filemanager_from_credentials.py  test_local_filemanager.py  test_memory_filemanager.py
