[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numerous"
readme = "README.md"
dynamic = ['version']
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "typing-extensions==4.9.0",
    "ariadne-codegen[subscriptions]==0.12.0",
    "packaging==24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "ruff",
    "mypy==1.8.0",
    "coverage==7.4.0",
    "twine==5.0.0",
    "pre-commit"
    ]

[tool.setuptools.dynamic]
version = { attr = "numerous.files.__version__" }

[tool.ruff]
exclude = ["./src/numerous/generated/", "./setup.py", "./docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "D101", "D103", "D107", "D211", "D212", "FA100", "FA102"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["INP001", "S101", "D100", "D103"]

[tool.mypy]
exclude = ["build", "setup.py", ".*venv.*"]
