[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numerous-files"
readme = "README.md"
version = "0.1.0"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "typing-extensions==4.9.0",
    "ariadne-codegen[subscriptions]==0.12.0",
    "packaging==24.0",
    "boto3==1.34.99"
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "pytest-cov",
    "ruff==0.4.2",
    "mypy==1.10.0",
    "coverage==7.4.0",
    "twine==5.0.0",
    "pytest-env==1.1.3",
    "pre-commit==3.7.0",
    "mkdocs==1.6.0",
    "mkdocstrings==0.25.0",
    "mkdocstrings-python==1.10.0",
    "mkdocs_snippet_plugin==1.0.2"
    ]

[tool.setuptools.dynamic]
version = { attr = "numerous.files.__version__" }

[tool.ruff]
exclude = ["./src/numerous/generated/", "./setup.py", "./docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "D101", "D103", "D107", "D211", "D212", "FA100", "FA102", "D407"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["INP001", "S101", "D100", "D103"]

[tool.mypy]
exclude = ["build", "setup.py", ".*venv.*"]

[tool.semantic_release]
branch = "main"
commit_parser = "angular"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''initial commit''',
]